--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
+  "name": "gladbot",
+  "description": "glad farm bot",
+  "version": "1.1.0",
+  "author": "LukeTheNeko",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "node --env-file .env.development index.js",
+    "start": "node --env-file .env index.js"
+  },
   "dependencies": {
     "colors": "^1.4.0",
-    "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1",
-    "fs": "^0.0.2",
+    "discord.js": "^14.15.2",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "math": "^0.0.3",
-    "mineflayer": "^4.14.0",
-    "moment": "^2.29.4"
+    "mineflayer": "^4.20.1",
+    "moment": "^2.30.1"
   }
 }
